Cosmetics
git-svn-id: https://jcae.svn.sourceforge.net/svnroot/jcae/trunk@1427 9c4724a3-da1e-0410-bc68-88f18da35cd4